--- a/stacks/terraform/stack.yaml
+++ b/stacks/terraform/stack.yaml
@@ -43,3 +43,18 @@ Resources:
           Resource:
             - !Sub "arn:${AWS::Partition}:s3:::terraform-states-${AWS::AccountId}-${AWS::Region}"
             - !Sub "arn:${AWS::Partition}:s3:::terraform-states-${AWS::AccountId}-${AWS::Region}/*"
+  TarraformDynamoTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    Properties:
+      TableName: terraform-lock-states
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: LockID
+          AttributeType: S
+      KeySchema:
+        - AttributeName: LockID
+          KeyType: HASH
+      SSESpecification:
+        SSEEnabled: true
